# stonksbot

./: .agent-kit.json  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  GETTING-STARTED.md  README.md  lefthook.yml.example  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  component-guardian.md  dead-code-auditor.md  explorer.md  instruction-drift-auditor.md  lookahead-auditor.md  researcher.md  risk-invariant-auditor.md  verification-reviewer.md
.codex/: config.toml  hooks.json
.codex/agents/: code-reviewer.toml  code_reviewer.toml  component-guardian.toml  component_guardian.toml  dead-code-auditor.toml  dead_code_auditor.toml  explorer.toml  instruction-drift-auditor.toml  instruction_drift_auditor.toml  lookahead-auditor.toml  lookahead_auditor.toml  researcher.toml  risk-invariant-auditor.toml  risk_invariant_auditor.toml  verification-reviewer.toml  verification_reviewer.toml
.codex/hooks/: post-tool-verify.js  session-start.js  user-prompt-nudge.js
.github/workflows/: ci.yml
config/: config.toml
docs/: IMPROVEMENT-ROADMAP.md  ROADMAP.md  TZ.md  frozen-decisions.md
evals/: 01-session-bootstrap.md  02-narrow-edit.md  03-broad-fanout.md  04-instruction-drift.md  05-frozen-decision.md  06-orchestration-degradation.md
src/stonksbot/: db.py  (+4 more)
tests/: test_account_guard.py  test_calendar.py  test_config.py  test_data_store.py  test_db.py  test_ingest.py  test_moex_iss.py  test_registry.py  test_session_policy.py
tools/: check-kit.mjs  evidence-gate.mjs  git-gate.mjs  install-hooks.mjs  secret-scan.mjs  test-gates.mjs
(+50 files in other folders)
