[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "stonksbot"
version = "0.1.0"
description = "Cautious MOEX/T-Invest research and backtest laboratory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

